tic tac toe complete

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </div>
       <!-- left end -->
       <div class="right">
+        <h1 class="title">Tic Tac Toe</h1>
         <div class="game-area">
           <div class="game-box box1"></div>
           <div class="game-box box2"></div>
@@ -29,6 +30,7 @@
           <div class="game-box box8"></div>
           <div class="game-box box9"></div>
         </div>
+        <button id="reset">Reset</button>
       </div>
       <!-- right end -->
     </div>
