--- a/index.html
+++ b/index.html
@@ -12,26 +12,39 @@
     <div class="main">
       <div class="left">
         <h2>Rules</h2>
-        <br>
+        <br />
         <p>
-          Tic-tac-toe is played on a three-by-three grid by two players, who alternately place the marks X and O in one of the nine spaces in the grid.
+          Tic-tac-toe is played on a three-by-three grid by two players, who
+          alternately place the marks X and O in one of the nine spaces in the
+          grid.
         </p>
-        <br>
+        <br />
         <p>
-          Win: If the player has two in a row, they can place a third to get three in a row. <br>
-          Block: If the opponent has two in a row, the player must play the third themselves to block the opponent. <br>
-          Fork: Cause a scenario where the player has two ways to win (two non-blocked lines of 2). <br>
-          Blocking an opponent's fork: If there is only one possible fork for the opponent, the player should block it. Otherwise, the player should block all forks in any way that simultaneously allows them to make two in a row. Otherwise, the player should make a two in a row to force the opponent into defending, as long as it does not result in them producing a fork. For example, if "X" has two opposite corners and "O" has the center, "O" must not play a corner move to win. (Playing a corner move in this scenario produces a fork for "X" to win.)
-          Center: A player marks the center. (If it is the first move of the game, playing a corner move gives the second player more opportunities to make a mistake and may therefore be the better choice; however, it makes no difference between perfect players.)
-          Opposite corner: If the opponent is in the corner, the player plays the opposite corner.
-          Empty corner: The player plays in a corner square.
-          Empty side: The player plays in a middle square on any of the four sides.
+          Win: If the player has two in a row, they can place a third to get
+          three in a row. <br />
+          Block: If the opponent has two in a row, the player must play the
+          third themselves to block the opponent. <br />
+          Fork: Cause a scenario where the player has two ways to win (two
+          non-blocked lines of 2). <br />
+          Blocking an opponent's fork: If there is only one possible fork for
+          the opponent, the player should block it. Otherwise, the player should
+          block all forks in any way that simultaneously allows them to make two
+          in a row. Otherwise, the player should make a two in a row to force
+          the opponent into defending, as long as it does not result in them
+          producing a fork. For example, if "X" has two opposite corners and "O"
+          has the center, "O" must not play a corner move to win. (Playing a
+          corner move in this scenario produces a fork for "X" to win.) Center:
+          A player marks the center. (If it is the first move of the game,
+          playing a corner move gives the second player more opportunities to
+          make a mistake and may therefore be the better choice; however, it
+          makes no difference between perfect players.) Opposite corner: If the
+          opponent is in the corner, the player plays the opposite corner. Empty
+          corner: The player plays in a corner square. Empty side: The player
+          plays in a middle square on any of the four sides.
         </p>
-        
       </div>
       <!-- left end -->
       <div class="right">
-        
         <h1 class="title">Tic Tac Toe</h1>
 
         <div class="players">
@@ -53,7 +66,6 @@
       </div>
       <!-- right end -->
     </div>
-
   </body>
   <script src="script.js"></script>
 </html>
